--- a/base/amazon-cloudwatch/cwagent-fluentd-quickstart.yaml
+++ b/base/amazon-cloudwatch/cwagent-fluentd-quickstart.yaml
@@ -63,12 +63,12 @@ data:
   cwagentconfig.json: |
     {
       "agent": {
-        "region": "{{region_name}}"
+        "region": "us-west-2"
       },
       "logs": {
         "metrics_collected": {
           "kubernetes": {
-            "cluster_name": "{{cluster_name}}",
+            "cluster_name": "reinvent2019",
             "metrics_collection_interval": 60
           }
         },
