--- a/base/sock-shop/complete-demo.yaml
+++ b/base/sock-shop/complete-demo.yaml
@@ -121,6 +121,9 @@ spec:
   replicas: 1
   template:
     metadata:
+      # DISABLED INJECTION
+      annotations:
+        appmesh.k8s.aws/sidecarInjectorWebhook: disabled
       labels:
         name: catalogue-db
     spec:
