--- a/base/sock-shop/appmesh.yaml
+++ b/base/sock-shop/appmesh.yaml
@@ -87,48 +87,50 @@ spec:
           weightedTargets:
             - virtualNodeName: carts
               weight: 1
-#---
-#apiVersion: appmesh.k8s.aws/v1beta1
-#kind: VirtualNode
-#metadata:
-#  name: catalogue-db
-#  namespace: sock-shop
-#spec:
-#  meshName: "reinvent-2019"
-#  listeners:
-#    - portMapping:
-#        port: 3306
-#        protocol: tcp
-#  serviceDiscovery:
-#    cloudMap:
-#      namespaceName: "reinvent-2019"
-#      serviceName: catalogue-db
-#  logging:
-#    accessLog:
-#      file:
-#        path: /dev/stdout
-#---
-#apiVersion: appmesh.k8s.aws/v1beta1
-#kind: VirtualService
-#metadata:
-#  name: catalogue-db
-#  namespace: sock-shop
-#spec:
-#  meshName: "reinvent-2019"
-#  virtualRouter:
-#    name: catalogue-db-router
-#    listeners:
-#      - portMapping:
-#          port: 3306
-#          protocol: tcp
-#  routes:
-#    - name: route-catalogue-db
-#      tcp:
-#        action:
-#          weightedTargets:
-#            - virtualNodeName: catalogue-db
-#              weight: 1
-#
+
+---
+apiVersion: appmesh.k8s.aws/v1beta1
+kind: VirtualNode
+metadata:
+  name: catalogue-db
+  namespace: sock-shop
+spec:
+  meshName: "reinvent-2019"
+  listeners:
+    - portMapping:
+        port: 3306
+        protocol: tcp
+  serviceDiscovery:
+    cloudMap:
+      namespaceName: "reinvent-2019"
+      serviceName: catalogue-db
+  logging:
+    accessLog:
+      file:
+        path: /dev/stdout
+---
+apiVersion: appmesh.k8s.aws/v1beta1
+kind: VirtualService
+metadata:
+  name: catalogue-db
+  namespace: sock-shop
+spec:
+  meshName: "reinvent-2019"
+  virtualRouter:
+    name: catalogue-db-router
+    listeners:
+      - portMapping:
+          port: 3306
+          protocol: tcp
+  routes:
+    - name: route-catalogue-db
+      tcp:
+        action:
+          weightedTargets:
+            - virtualNodeName: catalogue-db
+              weight: 1
+
+
 ---
 apiVersion: appmesh.k8s.aws/v1beta1
 kind: VirtualNode
@@ -149,9 +151,9 @@ spec:
     accessLog:
       file:
         path: /dev/stdout
-#  backends:
-#    - virtualService:
-#        virtualServiceName: catalogue-db
+  backends:
+    - virtualService:
+        virtualServiceName: catalogue-db
 ---
 apiVersion: appmesh.k8s.aws/v1beta1
 kind: VirtualService
