--- a/base/sock-shop/appmesh.yaml
+++ b/base/sock-shop/appmesh.yaml
@@ -102,7 +102,7 @@ spec:
         protocol: tcp
   serviceDiscovery:
     dns:
-      hostname: catalogue-db.sock-shop.cluster.local
+      hostname: catalogue-db.sock-shop.svc.cluster.local
     #cloudMap:
     #  namespaceName: "reinvent-2019"
     #  serviceName: catalogue-db
