--- a/base/sock-shop/complete-demo.yaml
+++ b/base/sock-shop/complete-demo.yaml
@@ -122,8 +122,8 @@ spec:
   template:
     metadata:
       # DISABLED INJECTION
-      #annotations:
-      #  appmesh.k8s.aws/sidecarInjectorWebhook: disabled
+      annotations:
+        appmesh.k8s.aws/sidecarInjectorWebhook: disabled
       labels:
         name: catalogue-db
     spec:
@@ -169,6 +169,8 @@ spec:
     metadata:
       labels:
         name: catalogue
+      annotations:
+        appmesh.k8s.aws/egressIgnoredPorts: "3306"
     spec:
       containers:
       - name: catalogue
